AMDATUIDEA-38 Add support for preview language levels.
switch to the preview level if java.options contains --enable-preview